fixed contrast, font sizes

--- a/assignments/lesson-7/styles/large-7.css
+++ b/assignments/lesson-7/styles/large-7.css
@@ -4,8 +4,8 @@
   article p.town-article img { width: 29.333%; }
 
    figure img {
-    width: 612px;
-    height: 408px;
+    width: 500px;
+    height: 300px;
 }
 
 section{
